--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
+<div>
+
 <app-auth-form
-(submittedUser) = "handleSubmit($event)"
-></app-auth-form>
+(submittedUser) = "createUser($event)">
+<h1> Create Account </h1>
+<button type = submit>
+  Sign up
+</button>
+</app-auth-form>
+
+<app-auth-form
+(submittedUser) = "loginUser($event)">
+<h1> Login </h1>
+<button type = submit>
+  Login
+</button>
+<app-auth-remember
+(check) = handleRemember($event)
+></app-auth-remember>
+</app-auth-form>
+
+
+</div>
