fix: Change detection + @contentChild, @viewChild implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,13 @@
 <div>
 
-<app-auth-form
-(submittedUser) = "createUser($event)">
+<app-auth-form (submittedUser) = "createUser($event)">
 <h1> Create Account </h1>
 <button type = submit>
   Sign up
 </button>
 </app-auth-form>
 
-<app-auth-form
-(submittedUser) = "loginUser($event)">
+<app-auth-form (submittedUser) = "loginUser($event)">
 <h1> Login </h1>
 <button type = submit>
   Login
