fix: Use ElementRef from viewChild to manipulate DOM elements

--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -3,7 +3,7 @@
     <ng-content select = "h1"></ng-content>
     <div>
         Email Address:
-        <input type = "email" name = "email" [ngModel]>
+        <input type = "email" name = "email" [ngModel] #email>
     </div>
     <div>
         Password:
