--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -1,6 +1,6 @@
 
 <form (ngSubmit)= "onSubmit(form.value)" #form = "ngForm" novalidate>
-    <ng-content select = "h1"></ng-content>
+    <h1> Login </h1>
     <div>
         Email Address:
         <input type = "email" name = "email" [ngModel] #email>
@@ -9,12 +9,9 @@
         Password:
         <input type = "password" name = "password" [ngModel]>
     </div>
-
-    <ng-content select = "button" ></ng-content>
-    <ng-content select = "app-auth-remember"></ng-content>
-    <!-- <div *ngIf = "loggedIn">
-        you will be logged in for 30 days
-    </div> -->
-
-    <app-auth-message [style.display] = "(loggedIn ? 'inherit' : 'none')"></app-auth-message>
+    <div>
+    <button type = submit>
+        Login
+    </button>
+</div>
 </form>
