feat: Render AuthFormComponent dynamically using ViewContainerRef, FactortResolver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div>
 
+<!-- <app-auth-form (submittedUser) = "loginUser($event)">
+</app-auth-form> -->
 
+<!-- dynamically rendering auth-form component below -->
 
-<app-auth-form (submittedUser) = "loginUser($event)">
-</app-auth-form>
-
+<div #entry></div>
 
 </div>
