feat: input,output,destroy and move dynamic component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,25 @@
 
 <!-- dynamically rendering auth-form component below -->
 
-<div #entry></div>
+<div #entry>
+
+    <div>
+        <button (click)= "destroyComponent()">
+            Destroy
+        </button>
+    </div>
+
+    <div>
+        <button (click)= "moveComponent()">
+            Move
+        </button>
+    </div>
+    
+</div>
+
+
+
+
+
 
 </div>
